src/app/progress/progress.scss
@import '../../scss/variables.scss';

.progress-page {
  margin: 16px auto !important;
  user-select: text;
  max-width: 90%;
  @include phone-portrait {
    max-width: 100%;
  }
  .progress-characters {
    display: flex;
    margin-top: 12px;
    margin-bottom: 12px;

    .character {
      height: auto;
      width: auto;
      display: flex;
      justify-content: center;
    }

    .character-box {
      flex: 1;
      cursor: default;
      border-bottom: none;
    }

    &:last-child .character-box {
      margin-right: 0;
    }
  }

  .small-icon {
    height: 26px;
    vertical-align: middle;
    position: relative;
    top: -1px;
  }

  .progress-for-character {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
    grid-auto-rows: min-content;
    grid-gap: 15px;
    padding: 15px;
    margin: 15px 0;
    width: 100%;
    border-right: 1px solid rgba(255, 255, 255, 0.5);
    &:last-child {
      border-right: none;
    }
    @include phone-portrait {
      max-width: none;
    }
  }

  .profile-content {
    display: flex;
    flex-direction: row;

    .section {
      flex: 1;
    }

    @include phone-portrait {
      flex-direction: column;
    }

    .progress-row {
      justify-content: flex-start;
    }
  }

  .progress-row {
    flex: 1;
    display: flex;
    flex-direction: row;
    justify-content: space-around;
  }

  hr {
    border: none;
    border-bottom: 1px solid #666;
    margin: 0 0 16px 0;
  }

  .milestone-reward-activity .app-icon {
    margin-right: 4px;
  }
}

